--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,17 @@
 /upload/image/cache/*
 !/upload/image/cache/index.html
 
+# Modification Files
+/upload/system/modification/*
+!/upload/system/modification/index.html
+
 # Templates Files
 /upload/image/templates/*
 /upload/image/templates/default.jpg
 
 # Download Files
-/upload/download/*
-!/upload/download/index.html
+/upload/system/download/*
+!/upload/system/download/index.html
 
 !/upload/data/index.html
 
